--- a/index.html
+++ b/index.html
@@ -63,13 +63,16 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Asim
+          <span class="text-primary">Thapa</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">3414 Dorr Street · Toledo, OH 43607 · (567) 377-6073 ·
+          <a href="mailto:name@email.com">asimtut@mail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">I am currently a Junior student majoring in BS in Computer Science and Engineering at The University of Toledo. 
+          Currently I'm working as DevOps Intern
+          at Crown Equipment Corporation. I love working in tech field and writing codes.
+        </p>
         <div class="social-icons">
           <a href="#">
             <i class="fab fa-linkedin-in"></i>
