--- a/index.html
+++ b/index.html
@@ -67,24 +67,27 @@
           <span class="text-primary">Thapa</span>
         </h1>
         <div class="subheading mb-5">3414 Dorr Street · Toledo, OH 43607 · (567) 377-6073 ·
-          <a href="mailto:name@email.com">asimtut@mail.com</a>
+          <a href="mailto:name@email.com">asimtut@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am currently a Junior student majoring in BS in Computer Science and Engineering at The University of Toledo. 
-          Currently I'm working as DevOps Intern
-          at Crown Equipment Corporation. I love working in tech field and writing codes.
-        </p>
+        <p class="lead mb-5">I am currently a Junior student majoring in BS in Computer Science and Engineering at The University of Toledo. My portfolio is a representation of all that 
+        I've learned and accomplished as a science and engineering student. I love working in technical field and coding. I am interested in the field of Software Development, Web Development, 
+        Machine Learning, Network and Security.</br></br>
+        Currently, I'm working as DevOps Engineer Intern at Crown Equipment Corporation. It's located in New Bremen, Ohio. Crown is the fourth largest Forklift manufacturer in the world.
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/asim-thapa/" target="_blank">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/asimtut" target="_blank">
             <i class="fab fa-github"></i>
           </a>
-          <a href="#">
+          <a href="https://twitter.com/kael_th" target="_blank">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/athapa" target="_blank">
             <i class="fab fa-facebook-f"></i>
+          </a>
+          <a href="https://www.instagram.com/asim.thapa/" target="_blank">
+            <i class="fab fa-instagram"></i>
           </a>
         </div>
       </div>
