--- a/index.html
+++ b/index.html
@@ -50,10 +50,16 @@
           <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
         </li>
         <li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+          </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#interests">Interests</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#awards">Awards</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#resume">Resume</a>
         </li>
       </ul>
     </div>
@@ -105,7 +111,7 @@
             <div class="subheading mb-3">Crown Equipment Corporation</div>
             <p> Worked in an Agile development environment with CI/CD practises using Atlassian tool suit. Develop, maintain and monitor automated build and continous software integration process
             to drive build/ release failure resolution using Bamboo. Took on the role to add a new static code analysis tool called Polyspace for the company. Worked closely with team of business
-            analyst, developers and technical support professionals to add the tool.
+            analyst, developers and technical support professionals to add the tool. Used Python scripts and Batch scripts to automate simple daily tasks and the Polyspace tool.
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -120,7 +126,7 @@
             <p>Mentored a class of 30 freshman students as a peer mentor. Helped and encouraged new students trying to get into programming.</p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">Jan 2019 - May 2019</span>
+            <span class="text-primary">January 2019 - May 2019</span>
           </div>
         </div>
 
@@ -191,43 +197,24 @@
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
-            <i class="fab fa-python userAdded"></i>
+            <i class="fab fa-python"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+            <i class="fab fa-java"></i>
           </li>
           <li class="list-inline-item">
             <i class="fab fa-js-square"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-angular"></i>
+            <i class="fab fa-html5"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-react"></i>
+            <i class="fab fa-css3-alt"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-node-js"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-sass"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-less"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-wordpress"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-gulp"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-grunt"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-npm"></i>
+            <i class="fab fa-atlassian"></i>
           </li>
         </ul>
-
         <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li>
@@ -246,6 +233,14 @@
       </div>
     </section>
 
+    <hr class="m-0">
+
+    
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="projects">
+        <div class="w-100">
+          <h2 class="mb-5">Projects</h2>
+      </section>
+  
     <hr class="m-0">
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="interests">
@@ -291,6 +286,16 @@
         </ul>
       </div>
     </section>
+
+    <hr class="m-0">
+
+    <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="resume">
+        <div class="w-100">
+          <h2 class="mb-5">Resume</h2>
+          <embed src="file/Asim_Resume.pdf" type="application/pdf" width="140%" height="1150">
+          <a href="file/Asim_Resume.pdf" target="_blank">PDF!</a>
+      </section>
+
 
   </div>
 
