--- a/index.html
+++ b/index.html
@@ -292,7 +292,8 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="resume">
         <div class="w-100">
           <h2 class="mb-5">Resume</h2>
-          <img src="img/resume.png "></br>
+          <a href="file/Asim_Resume.pdf" target="_blank">PDF!</a></br>
+          <img class="responsive_img" src="img/Resume.png " /></br>
           <a href="file/Asim_Resume.pdf" target="_blank">PDF!</a>
         </div>
       </section>
