--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         <div class="w-100">
           <h2 class="mb-5">Resume</h2>
           <a href="file/Asim_Resume.pdf" target="_blank">PDF!</a></br>
-          <img class="responsive_img" src="img/Resume.png " /></br>
+          <img class="responsive_img" src="resume.png " /></br>
           <a href="file/Asim_Resume.pdf" target="_blank">PDF!</a>
         </div>
       </section>
