--- a/index.html
+++ b/index.html
@@ -82,19 +82,19 @@
         Machine Learning, Network and Security.</br></br>
         Currently, I'm working as DevOps Engineer Intern at Crown Equipment Corporation. It's located in New Bremen, Ohio. Crown is the fourth largest Forklift manufacturer in the world.
         <div class="social-icons">
-          <a href="https://www.linkedin.com/in/asim-thapa/" target="_blank">
+          <a href="https://www.linkedin.com/in/asim-thapa/" target="_blank" title="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/asimtut" target="_blank">
+          <a href="https://github.com/asimtut" target="_blank" title="GitHub">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://twitter.com/kael_th" target="_blank">
+          <a href="https://twitter.com/kael_th" target="_blank" title="Twitter">
             <i class="fab fa-twitter"></i>
           </a>
-          <a href="https://www.facebook.com/athapa" target="_blank">
+          <a href="https://www.facebook.com/athapa" target="_blank" title="Facebook">
             <i class="fab fa-facebook-f"></i>
           </a>
-          <a href="https://www.instagram.com/asim.thapa/" target="_blank">
+          <a href="https://www.instagram.com/asim.thapa/" target="_blank" title="Instagram">
             <i class="fab fa-instagram"></i>
           </a>
         </div>
@@ -199,28 +199,28 @@
         <div class="subheading mb-3">Programming Languages &amp; Tools</div>
         <ul class="list-inline dev-icons">
           <li class="list-inline-item">
-            <i class="fab fa-python"></i>
+            <i class="fab fa-python" title="Python"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-java"></i>
+            <i class="fab fa-java" title="Java"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
+            <i class="fab fa-js-square" title="JavaScript"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-html5"></i>
+            <i class="fab fa-html5" title="HTML5"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-css3-alt"></i>
+            <i class="fab fa-css3-alt" title="CSS3"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-jira"></i>
+            <i class="fab fa-jira" title="Jira"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-bitbucket"></i>
+            <i class="fab fa-bitbucket" title="Bitbucket"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-confluence"></i>
+            <i class="fab fa-confluence" title="Confluence"></i>
           </li>
         </ul>
 
@@ -269,6 +269,9 @@
           I spend significant amount of my free time reading articles about what's happening in Tech industry. I am also very fascinated by Machine Learning. Currently I'm taking 
           Andrew Ng's Machine Learning class in Coursera.
         </p>
+        <!--
+          TODO: Add competetive program in the future after you get some good ranks
+        -->
       </div>
     </section>
 
