--- a/index.html
+++ b/index.html
@@ -88,15 +88,6 @@
           <a href="https://github.com/asimtut" target="_blank" title="GitHub">
             <i class="fab fa-github"></i>
           </a>
-          <a href="https://twitter.com/kael_th" target="_blank" title="Twitter">
-            <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://www.facebook.com/athapa" target="_blank" title="Facebook">
-            <i class="fab fa-facebook-f"></i>
-          </a>
-          <a href="https://www.instagram.com/asim.thapa/" target="_blank" title="Instagram">
-            <i class="fab fa-instagram"></i>
-          </a>
         </div>
       </div>
     </section>
@@ -265,9 +256,8 @@
           I love being around hills and mountains. During summer, I enjoy biking, kayaking, playing soccer and swimming. In the winter, I enjoy drinking hot drinks and spending time indoors.
         </p>
         <p class="mb-0">
-          When indoors, I like to read books, play video games and watch movies. I am also an aspiring musician and I love to play my bass guitar. 
-          I spend significant amount of my free time reading articles about what's happening in Tech industry. I am also very fascinated by Machine Learning. Currently I'm taking 
-          Andrew Ng's Machine Learning class in Coursera.
+          When indoors, I like to read books, play video games and watch movies. It sounds cliche but I love music and I play bass.
+          I spend significant amount of my free time reading articles about what's happening in Tech industry. 
         </p>
         <!--
           TODO: Add competetive program in the future after you get some good ranks
