Added new project and new job

--- a/index.html
+++ b/index.html
@@ -97,6 +97,17 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+		<div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Software Engineer Intern</h3>
+            <div class="subheading mb-3">Crown Equipment Corporation</div>
+            <p>Worked in developing web app using Angular and Java.
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">January 2020 - May 2020</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
@@ -108,7 +119,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2019 - Present</span>
+            <span class="text-primary">June 2019 - January 2020</span>
           </div>
         </div>
 
@@ -231,9 +242,14 @@
       <div class="w-100">
         <h2 class="mb-5">Projects</h2>
         <ul class="fa-ul mb-0">
-          <li>
-            <i class="fa-li fa fa-check"></i>
-            <a class="inline_txt" href="projects/RPS/index.html">Rock, Paper, Scissor</a>
+			<li>
+				<i class="fa-li fa fa-check"></i>
+				<a class="inline_txt" href="projects/RPS/index.html">Rock, Paper, Scissor</a>
+			</li>
+			<li>
+				<i class="fa-li fa fa-check"></i>
+				<a class="inline_txt" href="https://recipe-app-d3643.firebaseapp.com">RecipeOverflow: A simple recipe web app</a>
+			</li>
       </div>
     </section>
   
