--- a/index.html
+++ b/index.html
@@ -74,18 +74,19 @@
         <h1 class="mb-0">Asim
           <span class="text-primary">Thapa</span>
         </h1>
-        <div class="subheading mb-5">3414 Dorr Street · Toledo, OH 43607 · (567) 377-6073 ·
+        <div class="subheading mb-5">Toledo, OH · (567) 377-6073 ·
           <a href="mailto:name@email.com">asimtut@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am currently a Junior student majoring in BS in Computer Science and Engineering at The University of Toledo. My portfolio is a representation of all that 
-        I've learned and accomplished as a science and engineering student. I love working in technical field and coding. I am interested in the field of Software Development, Web Development, 
-        Machine Learning, Network and Security.</br></br>
-        Currently, I'm working as DevOps Engineer Intern at Crown Equipment Corporation. It's located in New Bremen, Ohio. Crown is the fourth largest Forklift manufacturer in the world.
+        <p class="lead mb-5">
+          Hi, I am Asim and currently I'm a Senior majoring in Computer Science and Engineering at <a href="https://www.utoledo.edu/">The University of Toledo</a>.</br>
+          I have worked at <a href="https://www.crown.com/en-us.html">Crown Equipment Corporation</a> for a year as DevOps Intern and Software Developer Intern. My goal is to become a 
+          Full Stack Developer in the next five years. Along with that I also like to work on Machine Learning, Unity and Cybersecurity.
+        </p>
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/asim-thapa/" target="_blank" title="LinkedIn">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="https://github.com/asimtut" target="_blank" title="GitHub">
+          <a href="https://github.com/notasimcard" target="_blank" title="GitHub">
             <i class="fab fa-github"></i>
           </a>
         </div>
@@ -101,7 +102,9 @@
           <div class="resume-content">
             <h3 class="mb-0">Software Engineer Intern</h3>
             <div class="subheading mb-3">Crown Equipment Corporation</div>
-            <p>Worked in developing web app using Angular and Java.
+            <p>
+              • Built internal web application to manage forklifts using <b>Angular</b> and <b>Java</b></br>
+              • Participated in daily Scrum meetings and managed project goals on Jira
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -113,9 +116,16 @@
           <div class="resume-content">
             <h3 class="mb-0">DevOps Engineer Intern</h3>
             <div class="subheading mb-3">Crown Equipment Corporation</div>
-            <p> Worked in an Agile development environment with CI/CD practises using Atlassian tool suit. Develop, maintain and monitor automated build and continous software integration process
-            to drive build/ release failure resolution using Bamboo. Took on the role to add a new static code analysis tool called Polyspace for the company. Worked closely with team of business
-            analyst, developers and technical support professionals to add the tool. Used Python scripts and Batch scripts to automate simple daily tasks and the Polyspace tool.
+            <p>
+              • Improved team’s efficiency by working on internal website in HTML and
+              JavaScript that keeps track of daily builds</br>
+              • Introduced Polyspace(static code analysis tool) to the team by researching and
+              working with MathWorks team to know more about the tool</br>
+              • Detected code errors early in the development cycle by creating Polyspace
+              projects for different projects and integrating Polyspace to the CI/CD pipeline</br>
+              • Improved team’s efficiency by automating the static code analysis process using
+              Python scripts, Bash scripts and Atlassian Bamboo tool</br>
+
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -127,7 +137,10 @@
           <div class="resume-content">
             <h3 class="mb-0">C++ Peer Mentor</h3>
             <div class="subheading mb-3">The University of Toledo</div>
-            <p>Mentored a class of 30 freshman students as a peer mentor. Helped and encouraged new students trying to get into programming.</p>
+            <p>
+              • Helped freshman students understand basic programming concepts by
+              mentoring a class of 30 students and working with other peer mentors
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2019 - May 2019</span>
@@ -138,7 +151,10 @@
           <div class="resume-content">
             <h3 class="mb-0">Office Assistant</h3>
             <div class="subheading mb-3">The University of Toledo</div>
-              <p>Performed general office clerk duties and errands like handeling incoming calls and guiding university visitors and students inside the tutoring center.</p>
+              <p>
+                • Managed tutoring center by guiding students and visitors, handling incoming
+                calls and performing general office clerk duties and errands
+              </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">January 2019 - May 2019</span>
@@ -149,7 +165,10 @@
           <div class="resume-content">
             <h3 class="mb-0">Student Worker</h3>
             <div class="subheading mb-3">The University of Toledo</div>
-            <p>Worked in a very busy dining environment serving about 300 customers per day. Also restocked supplies in neat and easily-accesible fashion.</p>
+            <p>
+              • Managed 300 students at university dining hall by guiding them,restocking
+              supplies and offering them food services
+            </p>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">September 2016 - December 2018</span>
@@ -217,12 +236,6 @@
           </li>
           <li class="list-inline-item">
             <i class="fab fa-jira" title="Jira"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-bitbucket" title="Bitbucket"></i>
-          </li>
-          <li class="list-inline-item">
-            <i class="fab fa-confluence" title="Confluence"></i>
           </li>
         </ul>
 
@@ -293,9 +306,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="resume">
         <div class="w-100">
           <h2 class="mb-5">Resume</h2>
-          <a href="file/Asim_Resume.pdf" target="_blank">PDF!</a></br>
-          <img class="responsive_img" src="img/resume.png " /></br>
-          <a href="file/Asim_Resume.pdf" target="_blank">PDF!</a>
+          <a href="file/Asim_Resume.pdf" target="_blank">Download PDF!</a></br>
         </div>
       </section>
 
